1998-10-27  Marc Horowitz  <marc@mit.edu>

	* server_kdb.c, svr_principal.c: convert to new crypto api

Sun Jul 26 18:09:55 1998  Sam Hartman  <hartmans@utwig.mesas.com>

	* Makefile.in (LIBMAJOR): bump libmajor

Wed Apr 15 18:06:14 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in (SHLIB_EXPDEPS): 
	(SHLIB_EXPLIBS): Rename libcrypto -> libk5crypto.

Fri Feb 27 22:33:05 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Changed thisconfigdir to point at the lib/kadm5
 		directory, since we've moved all of the configure.in
		tests to the toplevel lib/kadm5 configure.in.
		Instead of adding @LIBS@ to the list of libraries which
		should be linked as shared library dependencies, add
		@GEN_LIB@ and @AIX_DB_LIB@ which will get expanded if
		necessary. 

Wed Feb 18 16:15:22 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 21:30:58 1998  Tom Yu  <tlyu@mit.edu>

	* adb_xdr.c: Update header locations.

	* Makefile.in (LIBMAJOR): Bump major version to reflect change in
	rpc library.

Wed Jan 28 16:32:36 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in, Makefile.in: Remove the CopySrcHeader macro
		from configure.in and substitute equivalent
		functionality in Makefile.in

Mon Oct 13 10:59:22 1997  Ezra Peisach  <epeisach@mit.edu>

	* server_init.c (kadm5_destroy): Call kadm5_free_config_params.

	* server_acl.c: Include <ctype.h> for tolower().
	(acl_load_acl_file): Close acl file, even when acl_catchall_entry is
	    not set.

Wed Aug  6 20:22:23 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Add flags to conditionally compile with Hesiod.

	* server_misc.c: Add support for checking GECOS field of Hesiod
	passwd entry.

Fri Jul 25 15:37:08 1997  Tom Yu  <tlyu@mit.edu>

	* server_init.c: Change a few calls to align with the new kdb
	API.

	* Makefile.in: Bump version.

Tue Jul  1 02:32:49 1997  Tom Yu  <tlyu@mit.edu>
