@@ -1,3 +1,10 @@
+Tue Nov 17 18:20:48 1998  Tom Yu  <tlyu@mit.edu>
+
+	* svr_principal.c (kadm5_create_principal): 
+	(kadm5_chpass_principal): 
+	(kadm5_randkey_principal): Fix up for new calling conventions of
+	dbe_crk and dbe_cpw.
+
 1998-10-27  Marc Horowitz  <marc@mit.edu>
 
 	* server_kdb.c, svr_principal.c: convert to new crypto api
